Variable API host for dev and prod. Theme color + description fix.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="theme-color" content="#000000">
+        <meta name="theme-color" content="#373830">
         <meta name="keywords" content="sunrise, sunset, sunrise sunset, sunrise times, sunrise time, sunrise timings, sunset times, sunset time, sunset timings, sunrise map, sunset map, sunrise sunset map, sunrise calculator, sunset calculator, moonrise, moonset, moonrise times, moonset times, moon phase, lunar phase"/>
-        <meta name="description" content="Find sunrise, sunset, moonrise and moonset times for any location worldwide in <?php print $thisYear; ?> and <?php print $nextYear; ?> with one click."/>
+        <meta name="description" content="Find sunrise, sunset, moonrise and moonset times for any location worldwide in 2017 and 2018 with one click."/>
         <meta name="robots" content="index,follow"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Roboto+Slab">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Worldwide sunrise, sunset, moonrise and moonset times for 2017 &amp; 2018</title>
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlkd4z1Mr7ZiDdpDGmEEnH8zZKweKErGM&v=3.28"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_SSMAP_GOOGLE_API_KEY%&v=3.28"></script>
     </head>
   <body>
     <noscript>
