--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,11 +4,26 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#373830">
+        <meta name="msapplication-TileColor" content="#373830">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="keywords" content="sunrise, sunset, sunrise sunset, sunrise times, sunrise time, sunrise timings, sunset times, sunset time, sunset timings, sunrise map, sunset map, sunrise sunset map, sunrise calculator, sunset calculator, moonrise, moonset, moonrise times, moonset times, moon phase, lunar phase"/>
         <meta name="description" content="Find sunrise, sunset, moonrise and moonset times for any location worldwide in 2017 and 2018 with one click."/>
         <meta name="robots" content="index,follow"/>
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+        <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="%PUBLIC_URL%/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
         <link rel="stylesheet" href="%PUBLIC_URL%/css/flags.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Roboto+Slab">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
